fixing alignment of resume download link

--- a/css/portfolioStyle.css
+++ b/css/portfolioStyle.css
@@ -305,3 +305,9 @@ https://matthewjamestaylor.com/bottom-footer  */
     font-family: sans-serif;
     padding: 5px 10px 5px 10px;
 }
+
+#fullResume {
+    text-align: center;
+    padding-top: 25px;
+
+}
